# librecore-utils

./: .travis.yml  CMakeLists.txt  README.md
blobtool/: CMakeLists.txt  blobtool.l  blobtool.y  gbe-ich9m.set  gbe-ich9m.spec  ifd-x200.set  ifd-x200.spec  it8718f-ec.spec
cbfstool/: CMakeLists.txt  cbfs_image.c  cbfstool.c
cbfstool/flashmap/: CMakeLists.txt
cbfstool/lz4/: CMakeLists.txt
cbfstool/lzma/: CMakeLists.txt
cbfstool/vboot_justenough/: vb2_api.h
cbfstool/vbootstub/: 2sha_stub.c  2sha_stub.h  CMakeLists.txt
cbmem/: CMakeLists.txt
commonlib/: CMakeLists.txt  fsp_relocate_stub.c
ectool/: CMakeLists.txt
inteltool/: CMakeLists.txt
vbootstub/: CMakeLists.txt
